# ai-agent

./: booking_bot.py  pyproject.toml
core/: ask_user.py  book_table.py  get_booking_slots.py  tools.py
core/schema/: ask_user.json  book_table.json  get_booking_slots.json
